// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/ui should change genres key on SORT_SERIES 1`] = `
Object {
  "isLoading": false,
  "selectedGenres": Array [
    "animation",
  ],
  "selectedSortOrder": "popularity.desc",
}
`;

exports[`reducers/ui should change the sort key on SORT_SERIES 1`] = `
Object {
  "isLoading": false,
  "selectedGenres": Array [],
  "selectedSortOrder": "revenue.asc",
}
`;

exports[`reducers/ui should toggle loading state on API_START and API_END 1`] = `
Object {
  "isLoading": true,
  "selectedGenres": Array [],
  "selectedSortOrder": "popularity.desc",
}
`;

exports[`reducers/ui should toggle loading state on API_START and API_END 2`] = `
Object {
  "isLoading": false,
  "selectedGenres": Array [],
  "selectedSortOrder": "popularity.desc",
}
`;
